# ParaScore

./: README.md  data_trial_en.scores.json  data_trial_sv.scores.json  main.py  plot.ipynb  pyproject.toml
BARTScore/: analysis.py  bart_score.py  utils.py
bert_score/: score.py  scorer.py
src/: baseline.py  data_utils.py  eval_metric.py  score.py  tokenizeChinese.py  utils.py
