[tool.poetry]
name = "parascore"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
nltk = "3.6.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
tqdm = "4.60.0"
torch = {version = "^2.4.0+cu118", source = "torch"}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
